--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ t:
         taxifahrten: Taxifahrten
         interviews: Interviews
         hoehenmeter: Höhenmeter
+        weiterlesen: Weiterlesen
     es:
         contents: Tabla de materias
         impressum: Huella
@@ -63,3 +64,4 @@ t:
         taxifahrten: viajes en taxi
         interviews: entrevistas
         hoehenmeter: metros de altura
+        weiterlesen: Más
