Revert "Fixed path problems"
This reverts commit 9f53dc266a46c90d7313e56493d80b15c6241704.

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ name: Verantwortungsvolle Unternehmensführung in Lateinamerika
 author: Christian Hauser
 favicon: #favicon image path (svg)
 url: https://lehrehtw.github.io
-# without trailing /
-baseurl: /csr-lateinamerika
-# with leading / in case of a subfolder, without trailing /
+baseurl: /csr-lateinamerika/
 encoding: utf-8
 plugins:
     - jekyll-autoprefixer
