--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: Verantwortungsvolle Unternehmensführung in Lateinamerika
 author: Christian Hauser
 favicon: #favicon image path (svg)
-url: https://lehrehtw.github.io
-baseurl: /csr-lateinamerika/
+url: https://localhost:4000
+baseurl: /csr-lateinamerika
 encoding: utf-8
 plugins:
     - jekyll-autoprefixer
